2002-08-21  Glynn Foster  <glynn.foster@sun.com>

	* configure.in: Don't put dnl's in AC_OUTPUT.

2002-08-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.0

2002-08-21  Jody Goldberg <jody@gnome.org>

	* configure.in : work around an intltool bug by having autoconf expand
	  something from the rootdir last.

2002-08-19  Jody Goldberg <jody@gnome.org>

	* gnome-settings-daemon/gnome-settings-gtk1theme.h : fix cut-n-paste-o

2002-08-19  Jody Goldberg <jody@gnome.org>

	* gnome-settings-daemon/gnome-settings-gtk1theme.c : new
	  file from owen to manage gtk1 themes.

2002-08-15  Jody Goldberg <jody@gnome.org>

	* configure.in : set the version number to something sane
	  we branched.

2002-08-07  Jody Goldberg <jody@gnome.org>

	* po/POTFILES.in : remove bogus file.

2002-08-09  Yanko Kaneti <yaneti@declera.com>

	* capplets/common/capplet-util.h: handle different cases of
	preprocessor macro varargs support.

2002-08-08  Seth Nickell  <snickell@stanford.edu>

	* capplets/Makefile.am:

	Actually hook the windows capplet into the build. Though
	its sort of ass right now.

2002-08-08  Seth Nickell <snickell@stanford.edu>

	Try my best to throw a monkey wrench in things. Checkin
	Windows capplet, and add window related settings to
	the font capplet and theme capplet.

	Also fix button alignments on all capplets.

2002-07-27  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: add check for gtk+ with multihead
	support and define HAVE_GTK_MULTIHEAD if found.

2002-07-24  jacob berkman  <jacob@ximian.com>

	* configure.in: only #define HAVE_XFT2 if we actually have xft2

	* configure.in: fixup x11 checks when x11 include path is not in
	the default include path for the compiler

Tue Jul 23 23:31:17 2002  Owen Taylor  <otaylor@redhat.com>

	* capplets/font/main.c: Fix stupid typo.

Tue Jul 23 23:29:51 2002  Owen Taylor  <otaylor@redhat.com>

	* capplets/fonts/subpixel-{rgb,bgr,vrgb,vbgr}.c: Add
	some pixmaps for font rendering.
